# flavio

./: .coveragerc  .coveralls.yml  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE.txt  README.md  SKstgamma.py  deploy.sh  ez_setup.py  measurements.yml  pyproject.toml  setup.py
.github/workflows/: deploy.yml  test.yml
flavio/: __init__.py  _parse_errors.py  _version.py  citations.py  classes.py  config.py  functions.py  measurements.py  parameters.py  test_bsphimumu_obs.py  test_citations.py  test_classes.py  test_functions.py  test_measurements.py  test_parameters.py  test_parseerrors.py  util.py
flavio/data/: citations.yml  config.yml  measurements.yml  parameters.yml  parameters_correlated.yml  parameters_metadata.yml  parameters_uncorrelated.yml  update_citations.py
flavio/data/test/: 1.yaml  2.yaml  2009.09313_digitized.npz  3.yaml  4.yaml  (+3 more)
flavio/examples/: ckm_bayesian_emcee.py  ckm_bayesian_pypmc.py
flavio/io/: __init__.py  flha.py  instanceio.py  slha.py  test_flha.py  test_yaml.py  yaml.py
flavio/math/: __init__.py  functions.py  integrate.py  optimize.py  test_integrate.py  test_math.py  test_optimize.py
flavio/physics/: __init__.py  ckm.py  common.py  eft.py  elements.py  functions.py  pdg.py  test_ckm.py  test_common.py  test_eft.py  test_pdg.py  units.py
flavio/plots/: __init__.py  colors.py  config.py  plotfunctions.py  plots.py  test_plotfunctions.py
flavio/statistics/: __init__.py  classes.py  fits.py  functions.py  likelihood.py  probability.py  test_classes.py  test_fits.py  test_functions.py  test_likelihood.py  test_probability.py
(+294 files in other folders)
